--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,14 @@
     overflow: hidden;
 }
 
+#yellowbutton {
+	background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+}
+
 .bigbutton {
 	width: 100%;
 	text-align: center;
@@ -40,5 +48,6 @@
 h1 { text-align: center; } 
 .row {padding: 30px ;}
 
-h2 { text-align: center; } 
-.row {padding: 30px ;}
+h2 { text-align: center;
+	font-size: 15px;}
+
