--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,9 +45,14 @@
 
   font-size: 40px;
 }
-h1 { text-align: center; } 
+h1 { text-align: center; 
+} 
 .row {padding: 30px ;}
 
-h2 { text-align: center;
-	font-size: 15px;}
+h2 { 
+    text-align: center;
+	font-size: 15px;
+    color: white;
+}
+
 
