--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@ body {
 }
 
 #redbutton {
-	background-color: Transparent;
+    background: rgba(255, 255, 255, 0.5);
     background-repeat:no-repeat;
     border: none;
     cursor:pointer;
@@ -26,7 +26,7 @@ body {
 }
 
 #bluebutton {
-	background-color: Transparent;
+    background: rgba(255, 255, 255, 0.5);
     background-repeat:no-repeat;
     border: none;
     cursor:pointer;
@@ -34,15 +34,7 @@ body {
 }
 
 #greenbutton {
-	background-color: Transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    overflow: hidden;
-}
-
-#yellowbutton {
-	background-color: Transparent;
+    background: rgba(255, 255, 255, 0.5);
     background-repeat:no-repeat;
     border: none;
     cursor:pointer;
