more mobile friendly on home page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,10 @@
 body { 
-  background-image:url(assets/images/backgroundidea.jpg);
+  background-image: url("assets/images/pinkdust.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  background-color: #D6D6D6;
 }
 
 
