--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@ body {
 #redbutton {
     background: rgba(255, 255, 255, 0.5);
     background-repeat:no-repeat;
-    border: none;
+    border: white;
     cursor:pointer;
     overflow: hidden;
 }
@@ -30,7 +30,7 @@ body {
 #bluebutton {
     background: rgba(255, 255, 255, 0.5);
     background-repeat:no-repeat;
-    border: none;
+    border: white;
     cursor:pointer;
     overflow: hidden;
 }
@@ -38,7 +38,7 @@ body {
 #greenbutton {
     background: rgba(255, 255, 255, 0.5);
     background-repeat:no-repeat;
-    border: none;
+    border: white;
     cursor:pointer;
     overflow: hidden;
 }
