--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,35 +71,40 @@ h2 {
 
 
 .container1 {
-  position: relative;
-  width: 50%;
-}
+      position: relative;
+      width: 600px;
+      height: 400px;
+    }
+
 
 .image {
-  display: block;
-  width: 100%;
-  height: auto;
-}
+     postion: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+
 
 .overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: #D6D6D6;
-}
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      clear: float;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.6);
+      color: #ffffff;
+    }
 
 .container1:hover .overlay {
-  opacity: 1;
+  display: block;
 }
 
 .text {
-  color: white;
+  color: black;
   font-size: 20px;
   position: absolute;
   top: 50%;
