--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,18 @@ h2 {
     color: white;
 }
 
+h3 { 
+    text-align: center;
+  font-size: 16px;
+    color: black;
+}
+
+li { 
+    text-align: center;
+  font-size: 16px;
+    color: black;
+}
+
 @media screen and (min-width: 992px) {
   #topbutton {
     margin-top: 10px;
@@ -78,7 +90,7 @@ h2 {
 
 
 .image {
-     postion: absolute;
+     position: absolute;
       top: 0;
       left: 0;
       width: 100%;
@@ -107,9 +119,6 @@ h2 {
   color: black;
   font-size: 20px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  padding: 80px 30px 30px 30px;
 }
 
