--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,11 @@ h2 {
     color: white;
 }
 
+h3 {
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
 @media screen and (min-width: 992px) {
   #topbutton {
     margin-top: 10px;
@@ -112,4 +117,5 @@ h2 {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
+
 
