--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 body { 
-  background-image: url("https://images.unsplash.com/photo-1487762488615-8a011458b53e?auto=format&fit=crop&w=1334&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
+  background-image: url("rainingbackgroundfaded.jpg");
+
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -65,13 +66,21 @@ h2 {
 
 h3 {
     text-align: center;
-  font-size: 15px;
+  font-size: 19px;
     color: black;
 }
 
+
+h4 {
+  text-align: center;
+  font-size: 25px;
+  color: black;
+}
+
+
 li { 
-    text-align: center;
-  font-size: 16px;
+    text-align: left;
+  font-size: 19px;
     color: black;
 }
 
@@ -122,4 +131,12 @@ li {
   padding: 80px 30px 30px 30px;
 }
 
+.textcontainer {
+    background: rgba(255, 255, 255, 0.5);
+    background-repeat:no-repeat;
+    border: white;
+    text-align: center;
+    border-radius: 20px;
+
+  }
 
