--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,7 +117,21 @@ li {
   left:0;
   width:100%;
   text-align:center;
+  top: 0;
+  bottom: auto;
 }
+
+.overlay2 {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      clear: float;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.6);
+      color: #ffffff;
+    }
 
 .container1:hover .overlay {
   display: block;
