aghhh trying to fix area guide

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,7 +121,7 @@ li {
   bottom: auto;
 }
 
-.overlay2 {
+.hover {
       display: none;
       position: absolute;
       top: 0;
@@ -133,7 +133,7 @@ li {
       color: #ffffff;
     }
 
-.container1:hover .overlay {
+.container1:hover .hover {
   display: block;
 }
 
@@ -151,5 +151,5 @@ li {
     text-align: center;
     border-radius: 20px;
 
-  }
+
 
