--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,6 +157,14 @@ li {
     border: white;
     text-align: center;
     border-radius: 20px;
+  }
 
+.container1 {
+      position: relative;
+      width: 100%;
+      height: 400px;
+    }
 
-
+.container2:hover .overlay2 {
+  display: block;
+}
