--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,12 +160,18 @@ li {
     border-radius: 20px;
   }
 
-.container1 {
+.container2 {
       position: relative;
       width: 100%;
-      height: 400px;
+      height: 600px;
     }
 
 .container2:hover .overlay2 {
   display: block;
+}
+
+.Important_2 {
+  display:inline-block;
+  width:1000px;
+  height: 600px;
 }
