--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -163,8 +163,18 @@ li {
 .container2 {
       position: relative;
       width: 100%;
-      height: 600px;
+      height: 663px;
     }
+
+.container2 h5 {
+  z-index: 100;
+  position: absolute;
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+  left: 45px;
+  top: 40px;
+}
 
 .container2:hover .overlay2 {
   display: block;
@@ -172,6 +182,58 @@ li {
 
 .Important_2 {
   display:inline-block;
-  width:1000px;
-  height: 600px;
+  width:100%;
+  height: 663px;
+}
+
+.container3 {
+      position: relative;
+      width: 100%;
+      height: 663px;
+    }
+
+.container3 h5 {
+  z-index: 100;
+  position: absolute;
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+  left: 45px;
+  top: 40px;
+}
+
+.container3:hover .overlay2 {
+  display: block;
+}
+
+.Important_3 {
+  display:inline-block;
+  width:100%;
+  height: 663px;
+}
+
+.container4 {
+      position: relative;
+      width: 100%;
+      height: 663px;
+    }
+
+.container4 h5 {
+  z-index: 100;
+  position: absolute;
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+  left: 420px;
+  top: 40px;
+}
+
+.container4:hover .overlay2 {
+  display: block;
+}
+
+.Important_4 {
+  display:inline-block;
+  width:100%;
+  height: 663px;
 }
