--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -221,10 +221,10 @@ li {
 .container4 h5 {
   z-index: 100;
   position: absolute;
-  color: black;
+  color: white;
   font-size: 24px;
   font-weight: bold;
-  left: 420px;
+  left: 60px;
   top: 40px;
 }
 
@@ -259,6 +259,32 @@ li {
 }
 
 .Important_5 {
+  display:inline-block;
+  width:100%;
+  height: 800px;
+}
+
+.container6 {
+      position: relative;
+      width: 100%;
+      height: 800px;
+    }
+
+.container6 h5 {
+  z-index: 100;
+  position: absolute;
+  color: lightgrey;
+  font-size: 24px;
+  font-weight: bold;
+  left: 30px;
+  top: 40px;
+}
+
+.container6:hover .overlay2 {
+  display: block;
+}
+
+.Important_6 {
   display:inline-block;
   width:100%;
   height: 800px;
