--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,28 +26,94 @@ body {
 }
 
 #redbutton {
-    background: rgba(255, 255, 255, 0.5);
-    background-repeat:no-repeat;
-    border: white;
-    cursor:pointer;
-    overflow: hidden;
+  background: #f05877;
+  background-image: -webkit-linear-gradient(top, #f05877, #b82b7f);
+  background-image: -moz-linear-gradient(top, #f05877, #b82b7f);
+  background-image: -ms-linear-gradient(top, #f05877, #b82b7f);
+  background-image: -o-linear-gradient(top, #f05877, #b82b7f);
+  background-image: linear-gradient(to bottom, #f05877, #b82b7f);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  display:inline-block;
+  width: 65%;
 }
 
+.redbutton:hover {
+  background: #fc3c6c;
+  background-image: -webkit-linear-gradient(top, #fc3c6c, #d93463);
+  background-image: -moz-linear-gradient(top, #fc3c6c, #d93463);
+  background-image: -ms-linear-gradient(top, #fc3c6c, #d93463);
+  background-image: -o-linear-gradient(top, #fc3c6c, #d93463);
+  background-image: linear-gradient(to bottom, #fc3c6c, #d93463);
+  text-decoration: none;
+}
+
+
 #bluebutton {
-    background: rgba(255, 255, 255, 0.5);
-    background-repeat:no-repeat;
-    border: white;
-    cursor:pointer;
-    overflow: hidden;
+    background: #58b3f0;
+    background-image: -webkit-linear-gradient(top, #58b3f0, #2980b9);
+    background-image: -moz-linear-gradient(top, #58b3f0, #2980b9);
+    background-image: -ms-linear-gradient(top, #58b3f0, #2980b9);
+    background-image: -o-linear-gradient(top, #58b3f0, #2980b9);
+    background-image: linear-gradient(to bottom, #58b3f0, #2980b9);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    display:inline-block;
+    width: 65%;
+}
+
+.bluebutton:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
 
 #greenbutton {
-    background: rgba(255, 255, 255, 0.5);
-    background-repeat:no-repeat;
-    border: white;
-    cursor:pointer;
-    overflow: hidden;
+  background: #349447;
+  background-image: -webkit-linear-gradient(top, #349447, #8cc765);
+  background-image: -moz-linear-gradient(top, #349447, #8cc765);
+  background-image: -ms-linear-gradient(top, #349447, #8cc765);
+  background-image: -o-linear-gradient(top, #349447, #8cc765);
+  background-image: linear-gradient(to bottom, #349447, #8cc765);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  display:inline-block;
+  width: 65%;
 }
+
+.greenbutton:hover {
+  background: #44733b;
+  background-image: -webkit-linear-gradient(top, #44733b, #62bf4a);
+  background-image: -moz-linear-gradient(top, #44733b, #62bf4a);
+  background-image: -ms-linear-gradient(top, #44733b, #62bf4a);
+  background-image: -o-linear-gradient(top, #44733b, #62bf4a);
+  background-image: linear-gradient(to bottom, #44733b, #62bf4a);
+  text-decoration: none;
+}
+
+
 
 .bigbutton {
 	width: 100%;
