--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,12 +26,12 @@ body {
 }
 
 #redbutton {
-  background: #f05877;
-  background-image: -webkit-linear-gradient(top, #f05877, #b82b7f);
-  background-image: -moz-linear-gradient(top, #f05877, #b82b7f);
-  background-image: -ms-linear-gradient(top, #f05877, #b82b7f);
-  background-image: -o-linear-gradient(top, #f05877, #b82b7f);
-  background-image: linear-gradient(to bottom, #f05877, #b82b7f);
+  background: #767a76;
+  background-image: -webkit-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: -moz-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: -ms-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: -o-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: linear-gradient(to bottom, #767a76, #c2c7bf);
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
@@ -44,53 +44,54 @@ body {
   width: 65%;
 }
 
+
 .redbutton:hover {
-  background: #fc3c6c;
-  background-image: -webkit-linear-gradient(top, #fc3c6c, #d93463);
-  background-image: -moz-linear-gradient(top, #fc3c6c, #d93463);
-  background-image: -ms-linear-gradient(top, #fc3c6c, #d93463);
-  background-image: -o-linear-gradient(top, #fc3c6c, #d93463);
-  background-image: linear-gradient(to bottom, #fc3c6c, #d93463);
+  background: #636664;
+  background-image: -webkit-linear-gradient(top, #636664, #b3b3b3);
+  background-image: -moz-linear-gradient(top, #636664, #b3b3b3);
+  background-image: -ms-linear-gradient(top, #636664, #b3b3b3);
+  background-image: -o-linear-gradient(top, #636664, #b3b3b3);
+  background-image: linear-gradient(to bottom, #636664, #b3b3b3);
   text-decoration: none;
 }
 
 
 #bluebutton {
-    background: #58b3f0;
-    background-image: -webkit-linear-gradient(top, #58b3f0, #2980b9);
-    background-image: -moz-linear-gradient(top, #58b3f0, #2980b9);
-    background-image: -ms-linear-gradient(top, #58b3f0, #2980b9);
-    background-image: -o-linear-gradient(top, #58b3f0, #2980b9);
-    background-image: linear-gradient(to bottom, #58b3f0, #2980b9);
-    -webkit-border-radius: 28;
-    -moz-border-radius: 28;
-    border-radius: 28px;
-    font-family: Arial;
-    color: #ffffff;
-    font-size: 20px;
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
-    display:inline-block;
-    width: 65%;
+  background: #767a76;
+  background-image: -webkit-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: -moz-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: -ms-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: -o-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: linear-gradient(to bottom, #767a76, #c2c7bf);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  display:inline-block;
+  width: 65%;
 }
 
 .bluebutton:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  background: #636664;
+  background-image: -webkit-linear-gradient(top, #636664, #b3b3b3);
+  background-image: -moz-linear-gradient(top, #636664, #b3b3b3);
+  background-image: -ms-linear-gradient(top, #636664, #b3b3b3);
+  background-image: -o-linear-gradient(top, #636664, #b3b3b3);
+  background-image: linear-gradient(to bottom, #636664, #b3b3b3);
   text-decoration: none;
 }
 
 #greenbutton {
-  background: #349447;
-  background-image: -webkit-linear-gradient(top, #349447, #8cc765);
-  background-image: -moz-linear-gradient(top, #349447, #8cc765);
-  background-image: -ms-linear-gradient(top, #349447, #8cc765);
-  background-image: -o-linear-gradient(top, #349447, #8cc765);
-  background-image: linear-gradient(to bottom, #349447, #8cc765);
+  background: #767a76;
+  background-image: -webkit-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: -moz-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: -ms-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: -o-linear-gradient(top, #767a76, #c2c7bf);
+  background-image: linear-gradient(to bottom, #767a76, #c2c7bf);
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
@@ -104,12 +105,12 @@ body {
 }
 
 .greenbutton:hover {
-  background: #44733b;
-  background-image: -webkit-linear-gradient(top, #44733b, #62bf4a);
-  background-image: -moz-linear-gradient(top, #44733b, #62bf4a);
-  background-image: -ms-linear-gradient(top, #44733b, #62bf4a);
-  background-image: -o-linear-gradient(top, #44733b, #62bf4a);
-  background-image: linear-gradient(to bottom, #44733b, #62bf4a);
+  background: #636664;
+  background-image: -webkit-linear-gradient(top, #636664, #b3b3b3);
+  background-image: -moz-linear-gradient(top, #636664, #b3b3b3);
+  background-image: -ms-linear-gradient(top, #636664, #b3b3b3);
+  background-image: -o-linear-gradient(top, #636664, #b3b3b3);
+  background-image: linear-gradient(to bottom, #636664, #b3b3b3);
   text-decoration: none;
 }
 
@@ -123,7 +124,7 @@ body {
     font-size: 40px;
 }
 h1 { text-align: center; 
-    font-size: 30px;
+    font-size: 40px;
 } 
 
 
