--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -192,7 +192,6 @@ li {
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
     }
 
 
@@ -204,7 +203,7 @@ li {
       clear: float;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 255, 255, 0.6);
+      background-color: rgba(255, 255, 255, 0.7);
       color: #ffffff;
     }
 
@@ -381,4 +380,8 @@ li {
   display:inline-block;
   width:100%;
   height: 400px;
+}
+
+.hideoverflow {
+  overflow: hidden;
 }
