--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,10 +42,14 @@ body {
   text-decoration: none;
   display:inline-block;
   width: 65%;
+  position: relative;
+  float: none
+}
+  @media 
 }
 
 
-.redbutton:hover {
+#redbutton:hover {
   background: #636664;
   background-image: -webkit-linear-gradient(top, #636664, #b3b3b3);
   background-image: -moz-linear-gradient(top, #636664, #b3b3b3);
@@ -73,9 +77,11 @@ body {
   text-decoration: none;
   display:inline-block;
   width: 65%;
+  position: relative;
+  float: none
 }
 
-.bluebutton:hover {
+#bluebutton:hover {
   background: #636664;
   background-image: -webkit-linear-gradient(top, #636664, #b3b3b3);
   background-image: -moz-linear-gradient(top, #636664, #b3b3b3);
@@ -102,9 +108,11 @@ body {
   text-decoration: none;
   display:inline-block;
   width: 65%;
+  position: relative;
+  float: none
 }
 
-.greenbutton:hover {
+#greenbutton:hover {
   background: #636664;
   background-image: -webkit-linear-gradient(top, #636664, #b3b3b3);
   background-image: -moz-linear-gradient(top, #636664, #b3b3b3);
@@ -389,4 +397,10 @@ li {
 .paddedrow {
   margin-right: 0px;
   margin-left: 0px;
+}
+
+@media screen and (min-width: 768px) {
+  .mobilesmall {
+    width: have a play with the percent;
+  }
 }
