Changed area guide sizes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,7 +191,7 @@ li {
 .container1 {
       position: relative;
       width: 100%;
-      height: 400px;
+      height: 300px;
     }
 
 
@@ -217,13 +217,15 @@ li {
 
 .container1:hover .overlay2 {
   display: block;
+  height: 350px;
+
 }
 
 .text {
   color: black;
   font-size: 20px;
   position: absolute;
-  padding: 80px 30px 30px 30px;
+  padding: 30px 30px 30px 30px;
 }
 
 .textcontainer {
@@ -239,7 +241,7 @@ li {
 
 .textcontainer:hover .overlay2 {
   display: block;
-  height: 400px;
+  height: 100%;
 }
 
 
