--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,7 +191,7 @@ li {
 .container1 {
       position: relative;
       width: 100%;
-      height: 300px;
+      height: 365px;
     }
 
 
@@ -217,7 +217,8 @@ li {
 
 .container1:hover .overlay2 {
   display: block;  
-  height: 250px;
+  width: 100%;
+  height: 365px;
 
 }
 
